# sochdb

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  azure-pipelines.yml  sochdb-server-config.toml  start-studio.sh  test_analytics.js  test_analytics.py  test_error_tracking.js  test_error_tracking.py
.azurepipelines/: azure-pipelines-linux.yml  azure-pipelines-macos.yml  azure-pipelines-publish-only.yml  azure-pipelines-python-release.yml  azure-pipelines-windows.yml  azure-pipelines.yml  go-ci.yml  go-release.yml  nodejs-ci.yml  nodejs-release.yml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: release-sdks.yml  release.yml  workflow.yml
benchmarks/: Cargo.toml
benchmarks/scripts/: run_vector_workload.py
docker/: .env.example  .gitignore  BUILD_STATUS.md  Dockerfile  Dockerfile.slim  Makefile  QUICKSTART.md  README.md  README_LOCATION.md  SETUP_COMPLETE.md  TESTING.md  docker-compose.production.yml  docker-compose.yml  envoy.yaml  integration_test_results.json  performance_benchmark_results.json  prometheus.yml  run_tests.sh  test_integration.py  test_performance.py
docs/: ARCHITECTURE.md  ARCHITECTURE_SYNC_FIRST.md  E2E_TESTING_REPORT.md  RELEASE_NOTES_0.2.9.md  RELEASE_NOTES_0.3.0.md  RELEASE_NOTES_0.3.1.md  RELEASE_NOTES_0.3.3.md  RELEASE_NOTES_0.3.5.md  SQL_COMPATIBILITY.md  index.md
docs/api-reference/: python-api.md  rust-api.md  sql-api.md
docs/concepts/: architecture.md  performance.md  toon-format.md
docs/contributing/: style-guide.md  testing.md
docs/cookbook/: logging.md  mcp-integration.md  vector-indexing.md
docs/getting-started/: first-app.md  installation.md  quickstart.md
docs/guides/: analytics.md  bulk-operations.md  context-query.md  deployment.md  go-sdk.md  graph-overlay.md  hnsw-vector-search.md  nodejs-sdk.md  policy-hooks.md  python-sdk.md  rust-sdk.md  (+3 more)
examples/: README.md  SQL_STATUS.md  run_feature_tests.sh  test_cheatsheet.md
proto/: sochdb.proto
sochdb-client/: Cargo.toml  README.md
sochdb-core/: Cargo.toml  README.md
sochdb-core/src/: analytics.rs  block_storage.rs  buddy_allocator.rs  catalog.rs  columnar.rs  concurrency.rs  epoch_gc.rs  error.rs  format_migration.rs  key.rs  learned_index.rs  lib.rs  lockfree_interner.rs  memory_schema.rs  path_trie.rs  predefined_views.rs  reclamation.rs  schema_bridge.rs  schema_evolution.rs  sharded_block_store.rs  soch.rs  soch_codec.rs  sochfs_metadata.rs  string_interner.rs  tbp.rs  txn.rs  version_chain.rs  vfs.rs  zero_copy.rs
sochdb-grpc/: Cargo.toml  README.md  build.rs
sochdb-index/: Cargo.toml  README.md
sochdb-kernel/: Cargo.toml  README.md
sochdb-mcp/: Cargo.toml  README.md  mcp-claude-desktop.json  mcp-cursor.json  mcp-goose.json  mcp.json  sochdb-mcp-debug.sh  sochdb-mcp.sh  test_mcp_chat.py
sochdb-plugin-logging/: Cargo.toml
sochdb-python/: Cargo.toml  README.md  pyproject.toml
sochdb-query/: Cargo.toml  README.md
sochdb-storage/: Cargo.toml  README.md
sochdb-tools/: Cargo.toml
sochdb-vector/: Cargo.toml  build.rs
sochdb-wasm/: Cargo.toml
sochdb-wasm/src/: hnsw_core.rs  lib.rs
test_analytics_rust/: Cargo.toml
toondb-client/: Cargo.toml  README.md
toondb-core/: Cargo.toml  README.md
toondb-go/: README.md  client.go  database.go  query.go
toondb-grpc/: Cargo.toml
toondb-index/: Cargo.toml
toondb-js/: README.md  package-lock.json  package.json
toondb-kernel/: Cargo.toml
toondb-mcp/: Cargo.toml
toondb-plugin-logging/: Cargo.toml
toondb-python/: Cargo.toml  pyproject.toml
toondb-python-sdk/: README.md  pyproject.toml
toondb-query/: Cargo.toml  README.md
toondb-storage/: Cargo.toml  README.md
toondb-tools/: Cargo.toml
toondb-vector/: Cargo.toml
(+395 files in other folders)
