[package]
name = "sochdb-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SochDB vector index for WebAssembly (browser JavaScript)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# wasm-bindgen for JS interop
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }

# Serialization for JS
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Core data structures (no std dependencies)
smallvec = { version = "1.13", features = ["serde"] }
ordered-float = "4.2"

# Error handling
thiserror = { workspace = true }

# Serialization for JSON
serde_json = "1.0"

# Random number generation (wasm-compatible)
getrandom = { version = "0.2", features = ["js"] }
rand = { workspace = true }

# Panic hook for better errors
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = []

# NOTE: [profile.release] has been moved to the workspace root Cargo.toml
# For WASM-specific builds, use: cargo build --release -p sochdb-wasm
# with the workspace profile settings
